Расширяем таблицу памяти и куски кода

--- a/Промежуточные итоги/Инициализация (0x10000-0x10106).md
+++ b/Промежуточные итоги/Инициализация (0x10000-0x10106).md
@@ -1,32 +1,14 @@
-
-# Основная таблица
-
-| Начало  | Окончание | Длина, байт | Содержание           | Комментарий                                                                                                             |
-| ------- | --------- | ----------- | -------------------- | ----------------------------------------------------------------------------------------------------------------------- |
-| 0x10000 | 0x1013f   | 262         | Инициализация        | Настройка обработчика прерываний machine trap, считывание другой секции ROM, выхов основной функции, переход в L2 Cache |
-| ...     |           |             |                      |                                                                                                                         |
-| 0x10140 | 0x10174   | 52          | Machine trap handler | Обработчик прерываний machine trap                                                                                      |
-| ...     |           |             |                      |                                                                                                                         |
-| 0x10e80 | 0x136b6   | 10294       | Devicetree           | Devicetree blob (`.dtb`)                                                                                                |
-| ...     |           |             |                      |                                                                                                                         |
-| 0x13788 | 0x17fff   | 18551       | Пустые регистры      | Нулевые значения                                                                                                        |
-
-# Инициализация (0x10000-0x10106)
-
-| Начало  | Окончание | Длина, байт | Содержание                                   | Комментарий                                                                   |
-| ------- | --------- | ----------- | -------------------------------------------- | ----------------------------------------------------------------------------- |
-| 0x10000 | 0x10011   | 17          | Настройка указателя на machine trap handler  |                                                                               |
-| 0x10012 | 0x1001b   | 10          | Выбор ядра для исполнения следующего кода    | Следущий блок кода (0x10012-0x100a8) исполняется только ядром с thread id = 0 |
-| 0x1001c | 0x1005c   | 64          | Загрузка данных из другого сегмента ROM в L2 | Загрузка 0x1e0000 байт данных с адреса 0x9000000 (ROM) в кэш L2 (0x80000000)  |
-|         |           |             |                                              |                                                                               |
-|         |           |             |                                              |                                                                               |
-|         |           |             |                                              |                                                                               |
-|         |           |             |                                              |                                                                               |
-|         |           |             |                                              |                                                                               |
-|         |           |             |                                              |                                                                               |
-|         |           |             |                                              |                                                                               |
-|         |           |             |                                              |                                                                               |
-|         |           |             |                                              |                                                                               |
+| Начало  | Окончание | Длина, байт | Содержание                                   | Комментарий                                                                                                       |
+| ------- | --------- | ----------- | -------------------------------------------- | ----------------------------------------------------------------------------------------------------------------- |
+| 0x10000 | 0x10011   | 17          | Настройка указателя на machine trap handler  |                                                                                                                   |
+| 0x10012 | 0x1001b   | 10          | Выбор ядра для исполнения следующего кода    | Следущий блок кода (0x10012-0x100a8) исполняется только ядром с thread id = 0                                     |
+| 0x1001c | 0x1005c   | 64          | Загрузка данных из другого сегмента ROM в L2 | Загрузка 0x1e0000 байт данных с адреса 0x900_0000 (ROM) в кэш L2 (0x800_0000).<br>По адресу 0x900_0000 лежат нули |
+|         |           |             | Неиспользуемый код                           | Невыполнимое условие, по которому должна осуществляться запись нулей в область памяти в L2                        |
+|         |           |             | Инициирование machine software interrupt     |                                                                                                                   |
+|         |           |             | Обработка инициированных прерываний          |                                                                                                                   |
+|         |           |             | Настройка и разделение стеков для потоков    |                                                                                                                   |
+|         |           |             | Вызов функции main()                         | В main() код U-Boot загружается в L2                                                                              |
+|         |           |             | Переход в L2 Cache (запуск U-Boot)           |                                                                                                                   |
 
 ## Настройка указателя на machine trap handler
 ```asm
@@ -48,7 +30,10 @@
 00010018 63 98 24 09     bne        s1,s2,LAB_000100a8           ; if thread id != 0 goto 0x100a8
 ```
 
-## Загрузка данных из ROM (0x8000000) в L2
+## Загрузка данных из ROM (0x900_0000) в L2
+
+> По словам Сергея по адресу 0x900_0000 лежат нули
+
 ```asm
 0001001c b7 02 08 03     lui        t0,0x3080                    ; t0=0x3080000 (PDMA base + 80000)
 00010020 05 43           c.li       t1,0x1                       ; t1=1
@@ -72,7 +57,10 @@
 ...
 ```
 
+## Неиспользуемый код
 
+> Метка memcpy не будет вызвана из-за ветвления 0x1007c
+> Сам цикл для текущих значений не имеет смысла (условие выхода из цикла всегда выполнится)
 
 ```asm
 00010060 97 32 00 00     auipc      t0,0x3                     ; t0=13060
@@ -83,10 +71,6 @@
 00010074 97 33 00 00     auipc      t2,0x3                     ; t2=13074
 00010078 93 83 43 71     addi       t2,t2,0x714                ; t2=13788
 0001007c 63 7a 73 00     bgeu       t1,t2,trigger_mip
-```
-
-## Заполнение области памяти нулями (TODO)
-```asm
 					 memcpy                                         
 00010080 03 be 02 00     ld         t3,0x0(t0=>DAT_000137c0)   ; do { t3=x[t0] as dword
 00010084 23 30 c3 01     sd         t3,0x0(t1=>DAT_08100000)   ; x[t1]=t3 as dword (somewhere in 
@@ -95,7 +79,11 @@
 0001008c e3 6a 73 fe     bltu       t1,t2,memcpy               ; } while(t1 < t2)
 ```
 
-## Инициирование прерываний (каких?)
+## Инициирование machine software interrupt 
+
+> В цикле единицы записываются по адресам 0x200_0000 - 0x200_0080 с шагом 4
+> При этом в RM есть только регистры 0x0200_0000, 0x0200_0004, 0x0200_0008, 0x0200_000c, 0x0200_0010 (Table 57), следующие регистры начинаются с 0x0200_4028
+
 ```asm
 					 trigger_mip                               
 00010090 b7 04 00 02     lui        s1,0x2000                  ; s1=2000000
@@ -129,7 +117,7 @@
 000100da e3 c7 24 ff     blt        s1,s2,LAB_000100c8         ; } while (s1 < s2)
 ```
 
-## Настройка стека
+## Настройка и разделение стеков для потоков
 ```asm
 000100de f3 22 40 f1     csrrs      t0,mhartid,zero            ; t0 = thread id
 000100e2 b2 02           c.slli     t0,0xc                     ; t0 <<= c
@@ -138,7 +126,7 @@
 000100ec 33 01 51 40     sub        sp,sp,t0                   ; sp -= t0 (setup stack for different threads)
 ```
 
-## Переход в функцию main()
+##  Вызов функции main()
 ```asm
 000100f0 ef 00 60 08     jal        ra,main                    ; int main(void)
 ```
