--- a/Обсуждения/04.02.md
+++ b/Обсуждения/04.02.md
@@ -1,7 +1,7 @@
 ## На чём мы остановились вчера
 
-1. Поднять сервер Ghidra для совместной работы
-2. ~~Разбиться на команды: дать кого-то Веронике в усиление, спросить у Андрея, как ему можно помочь
+1. ~~Поднять сервер Ghidra для совместной работы~~
+2. ~~Разбиться на команды: дать кого-то Веронике в усиление, спросить у Андрея, как ему можно помочь~~
 3. ~~Попросить Сергея снять дамп с точкой останова на той странной инструкции~~
 4. ~~Антону: разобраться со схематиком и почитать про работу с UART и SDIO (QSPI?): в какой-то момент защёлкивается один из выводов~~
 5. Начать подбивать презентацию и оформлять всё (Ира?)
