--- a/Промежуточные итоги/Инициализация (0x10000-0x10106).md
+++ b/Промежуточные итоги/Инициализация (0x10000-0x10106).md
@@ -1,14 +1,15 @@
-| Начало  | Окончание | Длина, байт | Содержание                                   | Комментарий                                                                                                       |
-| ------- | --------- | ----------- | -------------------------------------------- | ----------------------------------------------------------------------------------------------------------------- |
-| 0x10000 | 0x10011   | 17          | Настройка указателя на machine trap handler  |                                                                                                                   |
-| 0x10012 | 0x1001b   | 10          | Выбор ядра для исполнения следующего кода    | Следущий блок кода (0x10012-0x100a8) исполняется только ядром с thread id = 0                                     |
-| 0x1001c | 0x1005c   | 64          | Загрузка данных из другого сегмента ROM в L2 | Загрузка 0x1e0000 байт данных с адреса 0x900_0000 (ROM) в кэш L2 (0x800_0000).<br>По адресу 0x900_0000 лежат нули |
-|         |           |             | Неиспользуемый код                           | Невыполнимое условие, по которому должна осуществляться запись нулей в область памяти в L2                        |
-|         |           |             | Инициирование machine software interrupt     |                                                                                                                   |
-|         |           |             | Обработка инициированных прерываний          |                                                                                                                   |
-|         |           |             | Настройка и разделение стеков для потоков    |                                                                                                                   |
-|         |           |             | Вызов функции main()                         | В main() код U-Boot загружается в L2                                                                              |
-|         |           |             | Переход в L2 Cache (запуск U-Boot)           |                                                                                                                   |
+| Начало  | Окончание | Длина, байт | Содержание                                   | Комментарий                                                                                |
+| ------- | --------- | ----------- | -------------------------------------------- | ------------------------------------------------------------------------------------------ |
+| 0x10000 | 0x10011   | 18          | Настройка указателя на machine trap handler  |                                                                                            |
+| 0x10012 | 0x1001b   | 10          | Выбор ядра для исполнения следующего кода    | Следущий блок кода (0x10012-0x100a8) исполняется только ядром с thread id = 0              |
+| 0x1001c | 0x1005c   | 68          | Загрузка данных из другого сегмента ROM в L2 | Загрузка 0x1e0000 байт данных с адреса 0x900_0000 (ROM) в кэш L2 (0x800_0000)              |
+| 0x10060 | 0x1008f   | 48          | Неиспользуемый код                           | Невыполнимое условие, по которому должна осуществляться запись нулей в область памяти в L2 |
+| 0x10090 | 0x100a7   | 24          | Инициирование machine software interrupt     |                                                                                            |
+| 0x100a8 | 0x100dd   | 54          | Обработка инициированных прерываний          |                                                                                            |
+| 0x100de | 0x100ef   | 18          | Настройка и разделение стеков для потоков    |                                                                                            |
+| 0x100f0 | 0x100f3   | 4           | Вызов функции main()                         | В main() код U-Boot загружается в L2                                                       |
+| 0x100f4 | 0x10107   | 20          | Переход в L2 Cache (запуск U-Boot)           |                                                                                            |
+| 0x1010c | 0x1013f   | 52          | -                                            | Область заполнена 0x00                                                                     |
 
 ## Настройка указателя на machine trap handler
 ```asm
