--- a/Промежуточные итоги/Таблица памяти (общая).md
+++ b/Промежуточные итоги/Таблица памяти (общая).md
@@ -2,8 +2,8 @@
 | Начало  | Окончание | Длина, байт | Содержание           | Комментарий                                                                                                             |
 | ------- | --------- | ----------- | -------------------- | ----------------------------------------------------------------------------------------------------------------------- |
 | 0x10000 | 0x1013f   | 262         | Инициализация        | Настройка обработчика прерываний machine trap, считывание другой секции ROM, выхов основной функции, переход в L2 Cache |
-| ...     |           |             |                      |                                                                                                                         |
-| 0x10140 | 0x10174   | 52          | Machine trap handler | Обработчик прерываний machine trap                                                                                      |
+| 0x10140 | 0x10175   | 54          | Machine trap handler | Обработчик прерываний machine trap                                                                                      |
+| 0x10176 | 0x10225   |             | Main                 |                                                                                                                         |
 | ...     |           |             |                      |                                                                                                                         |
 | 0x10e80 | 0x136b6   | 10294       | Devicetree           | Devicetree blob (`.dtb`)                                                                                                |
 | ...     |           |             |                      |                                                                                                                         |
