--- a/Промежуточные итоги/Таблица памяти (общая).md
+++ b/Промежуточные итоги/Таблица памяти (общая).md
@@ -1,11 +1,15 @@
 
-| Начало  | Окончание | Длина, байт | Содержание           | Комментарий                                                                                                             |
-| ------- | --------- | ----------- | -------------------- | ----------------------------------------------------------------------------------------------------------------------- |
-| 0x10000 | 0x1013f   | 262         | Инициализация        | Настройка обработчика прерываний machine trap, считывание другой секции ROM, выхов основной функции, переход в L2 Cache |
-| 0x10140 | 0x10175   | 54          | Machine trap handler | Обработчик прерываний machine trap                                                                                      |
-| 0x10176 | 0x10225   |             | Main                 |                                                                                                                         |
-| ...     |           |             |                      |                                                                                                                         |
-| 0x10e80 | 0x136b6   | 10294       | Devicetree           | Devicetree blob (`.dtb`)                                                                                                |
-| ...     |           |             |                      |                                                                                                                         |
-| 0x13788 | 0x17fff   | 18551       | Пустые регистры      | Нулевые значения                                                                                                        |
+| **Начало** | **Окончание** | **Длина, байт** | **Содержание**                            | **Комментарий**                                                                                                         |
+| ---------- | ------------- | --------------- | ----------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- |
+| 0x10000    | 0x1013f       | 262             | Инициализация                             | Настройка обработчика прерываний machine trap, считывание другой секции ROM, выхов основной функции, переход в L2 Cache |
+| 0x10140    | 0x10175       | 54              | Machine trap handler                      | Обработчик прерываний machine trap                                                                                      |
+| 0x10176    | 0x10225       |                 | Main                                      |                                                                                                                         |
+| 0x10348    | 0x10363       |                 | Отправка сообщения по UART                |                                                                                                                         |
+| 0x10364    | 0x1038f       |                 | Отправка шестнадцатиричного числа по UART |                                                                                                                         |
+| ...        |               |                 |                                           |                                                                                                                         |
+| 0x10686    | 0x10703       |                 | Вывод кода ошибки по UART                 |                                                                                                                         |
+| ...        |               |                 |                                           |                                                                                                                         |
+| 0x10e80    | 0x136b6       | 10294           | Devicetree                                | Devicetree blob (`.dtb`)                                                                                                |
+| ...        |               |                 |                                           |                                                                                                                         |
+| 0x13788    | 0x17fff       | 18551           | Пустые регистры                           | Нулевые значения                                                                                                        |
 
