--- a/Промежуточные итоги/Отправка шестнадцатеричного числа по UART (0x10364-0x1038f).md
+++ b/Промежуточные итоги/Отправка шестнадцатеричного числа по UART (0x10364-0x1038f).md
@@ -8,7 +8,7 @@
 	 int               a3:4           loop_iterator
 	 int               a1:4           err_code
 					 print_hex_to_uart
-00010364 f1  46           c.li       loop_iterator ,0x1c          ; a3 = 1c
+00010364 f1  46           c.li       loop_iterator ,0x1c          ; a3 = 0x1c
 00010366 25  48           c.li       a6,0x9                       ; a6 = 9
 00010368 71  56           c.li       a2,-0x4                      ; a2 = -4
 					 outer_loop
