--- a/Промежуточные итоги/Таблица памяти (общая).md
+++ b/Промежуточные итоги/Таблица памяти (общая).md
@@ -1,15 +1,23 @@
 
-| **Начало** | **Окончание** | **Длина, байт** | **Содержание**                            | **Комментарий**                                                                                                         |
-| ---------- | ------------- | --------------- | ----------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- |
-| 0x10000    | 0x1013f       | 262             | Инициализация                             | Настройка обработчика прерываний machine trap, считывание другой секции ROM, выхов основной функции, переход в L2 Cache |
-| 0x10140    | 0x10175       | 54              | Machine trap handler                      | Обработчик прерываний machine trap                                                                                      |
-| 0x10176    | 0x10225       |                 | Main                                      |                                                                                                                         |
-| 0x10348    | 0x10363       |                 | Отправка сообщения по UART                |                                                                                                                         |
-| 0x10364    | 0x1038f       |                 | Отправка шестнадцатиричного числа по UART |                                                                                                                         |
-| ...        |               |                 |                                           |                                                                                                                         |
-| 0x10686    | 0x10703       |                 | Вывод кода ошибки по UART                 |                                                                                                                         |
-| ...        |               |                 |                                           |                                                                                                                         |
-| 0x10e80    | 0x136b6       | 10294           | Devicetree                                | Devicetree blob (`.dtb`)                                                                                                |
-| ...        |               |                 |                                           |                                                                                                                         |
-| 0x13788    | 0x17fff       | 18551           | Пустые регистры                           | Нулевые значения                                                                                                        |
+| **Начало** | **Окончание** | **Длина, байт** | **Содержание**                                        | **Комментарий**                                                                                                         |
+| ---------- | ------------- | --------------- | ----------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- |
+| 0x10000    | 0x1013f       |                 | Инициализация                                         | Настройка обработчика прерываний machine trap, считывание другой секции ROM, выхов основной функции, переход в L2 Cache |
+| 0x10140    | 0x10175       |                 | Machine trap handler                                  | Обработчик прерываний machine trap                                                                                      |
+| 0x10176    | 0x10225       |                 | (TBD) Main                                            |                                                                                                                         |
+| 0x10226    | 0x10257       |                 | -                                                     |                                                                                                                         |
+| 0x10258    | 0x10275       |                 | Чтение и запись в SPI                                 |                                                                                                                         |
+| 0x10276    | 0x1032b       |                 | Чтение тома (Flash Bit-banged)                        |                                                                                                                         |
+| 0x1032c    | 0x10347       |                 | -                                                     | Неиспользуемое копирование по bit-banged SPI                                                                            |
+| 0x10348    | 0x10363       |                 | Отправка сообщения по UART                            |                                                                                                                         |
+| 0x10364    | 0x1038f       |                 | Отправка шестнадцатеричного числа по UART             |                                                                                                                         |
+| 0x10390    | 0x103eb       |                 | -                                                     |                                                                                                                         |
+| 0x103ec    | 0x104bf       |                 | Поиск и копирование кода U-Boot (Flash Bit-banged)    |                                                                                                                         |
+| 0x104c0    | 0x10599       |                 | Поиск и копирование кода U-Boot (SD Bit-Banged)       |                                                                                                                         |
+| 0x1059a    | 0x10637       |                 | Поиск и копирование кода U-Boot (Flash Memory-Mapped) |                                                                                                                         |
+| 0x10638    | 0x10685       |                 | -                                                     | Неиспользуемое копирование в DMA                                                                                        |
+| 0x10686    | 0x10703       |                 | Вывод кода ошибки по UART                             |                                                                                                                         |
+| ...        |               |                 |                                                       |                                                                                                                         |
+| 0x10e80    | 0x136b6       | 10294           | Devicetree                                            | Devicetree blob (`.dtb`)                                                                                                |
+| ...        |               |                 |                                                       |                                                                                                                         |
+| 0x13788    | 0x17fff       | 18551           | Пустые регистры                                       | Нулевые значения                                                                                                        |
 
