Разобрано ещё несколько функций

--- a/Промежуточные итоги/Таблица памяти (общая).md
+++ b/Промежуточные итоги/Таблица памяти (общая).md
@@ -1,23 +1,31 @@
 
-| **Начало** | **Окончание** | **Длина, байт** | **Содержание**                                        | **Комментарий**                                                                                                         |
-| ---------- | ------------- | --------------- | ----------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- |
-| 0x10000    | 0x1013f       |                 | Инициализация                                         | Настройка обработчика прерываний machine trap, считывание другой секции ROM, выхов основной функции, переход в L2 Cache |
-| 0x10140    | 0x10175       |                 | Machine trap handler                                  | Обработчик прерываний machine trap                                                                                      |
-| 0x10176    | 0x10225       |                 | (TBD) Main                                            |                                                                                                                         |
-| 0x10226    | 0x10257       |                 | -                                                     |                                                                                                                         |
-| 0x10258    | 0x10275       |                 | Чтение и запись в SPI                                 |                                                                                                                         |
-| 0x10276    | 0x1032b       |                 | Чтение тома (Flash Bit-banged)                        |                                                                                                                         |
-| 0x1032c    | 0x10347       |                 | -                                                     | Неиспользуемое копирование по bit-banged SPI                                                                            |
-| 0x10348    | 0x10363       |                 | Отправка сообщения по UART                            |                                                                                                                         |
-| 0x10364    | 0x1038f       |                 | Отправка шестнадцатеричного числа по UART             |                                                                                                                         |
-| 0x10390    | 0x103eb       |                 | -                                                     |                                                                                                                         |
-| 0x103ec    | 0x104bf       |                 | Поиск и копирование кода U-Boot (Flash Bit-banged)    |                                                                                                                         |
-| 0x104c0    | 0x10599       |                 | Поиск и копирование кода U-Boot (SD Bit-Banged)       |                                                                                                                         |
-| 0x1059a    | 0x10637       |                 | Поиск и копирование кода U-Boot (Flash Memory-Mapped) |                                                                                                                         |
-| 0x10638    | 0x10685       |                 | -                                                     | Неиспользуемое копирование в DMA                                                                                        |
-| 0x10686    | 0x10703       |                 | Вывод кода ошибки по UART                             |                                                                                                                         |
-| ...        |               |                 |                                                       |                                                                                                                         |
-| 0x10e80    | 0x136b6       | 10294           | Devicetree                                            | Devicetree blob (`.dtb`)                                                                                                |
-| ...        |               |                 |                                                       |                                                                                                                         |
-| 0x13788    | 0x17fff       | 18551           | Пустые регистры                                       | Нулевые значения                                                                                                        |
+| **Начало** | **Окончание** | **Содержание**                                        | **Комментарий**                                                                                                      |
+| ---------- | ------------- | ----------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------- |
+| 0x10000    | 0x10107       | Инициализация                                         | Настройка обработчика прерываний machine trap, считывание другой секции ROM, вызов  функции main(), переход в L2 кэш |
+| 0x10108    | 0x1010b       | Трамплин в обработчик прерываний machine trap         |                                                                                                                      |
+| 0x1010c    | 0x1013f       | -                                                     | Нулевые значения                                                                                                     |
+| 0x10140    | 0x10149       | Обработчик прерываний machine trap                    |                                                                                                                      |
+| 0x1014a    | 0x10175       | -                                                     | Неиспользуемый код                                                                                                   |
+| ...        |               | (TBD) Main                                            |                                                                                                                      |
+| 0x10226    | 0x10257       | -                                                     | Неиспользуемый код                                                                                                   |
+| 0x10258    | 0x10275       | Чтение и запись в SPI                                 |                                                                                                                      |
+| 0x10276    | 0x1032b       | Чтение тома (Flash Bit-banged)                        |                                                                                                                      |
+| 0x1032c    | 0x10347       | -                                                     | Неиспользуемое копирование по bit-banged SPI                                                                         |
+| 0x10348    | 0x10363       | Отправка сообщения по UART                            |                                                                                                                      |
+| 0x10364    | 0x1038f       | Отправка шестнадцатеричного числа по UART             |                                                                                                                      |
+| 0x10390    | 0x103eb       | -                                                     | Неиспользуемый код                                                                                                   |
+| 0x103ec    | 0x104bf       | Поиск и копирование кода U-Boot (Flash Bit-banged)    |                                                                                                                      |
+| 0x104c0    | 0x10599       | Поиск и копирование кода U-Boot (SD Bit-Banged)       |                                                                                                                      |
+| 0x1059a    | 0x10637       | Поиск и копирование кода U-Boot (Flash Memory-Mapped) |                                                                                                                      |
+| 0x10638    | 0x10685       | -                                                     | Неиспользуемое копирование в DMA                                                                                     |
+| 0x10686    | 0x10703       | Вывод кода ошибки по UART                             |                                                                                                                      |
+| ...        |               | Загрузка U-Boot в L2 кэш                              |                                                                                                                      |
+| 0x10954    | 0x1097f       | -                                                     | Неиспользуемый код                                                                                                   |
+| 0x10980    | 0x109d5       | Поиск U-Boot в GPT                                    | Поиск тома с нужным GUID                                                                                             |
+| 0x109d6    | 0x10ab9       | -                                                     | Неиспользуемый код                                                                                                   |
+| 0x10aba    | 0x10b29       | Подготовка к чтению данных с microSD                  |                                                                                                                      |
+| ...        |               |                                                       |                                                                                                                      |
+|            | 0x10e26       |                                                       |                                                                                                                      |
+| ...        |               |                                                       |                                                                                                                      |
+| 0x13788    | 0x17fff       | Пустые регистры                                       | Нулевые значения                                                                                                     |
 
